--- a/Develop/style.css
+++ b/Develop/style.css
@@ -4,6 +4,10 @@ body {
   line-height: 1;
 }
 
+ .hour {
+  white-space: nowrap;
+}
+
 textarea {
   background: transparent;
   border: none;
@@ -68,4 +72,16 @@ textarea {
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+}
+
+.red {
+  background-color: red;
+}
+
+.gray {
+  background-color: gray;
+}
+
+.green {
+  background-color: green;
 }
